# mmaction1_app

./: .gitignore  AGENTS.md  README.md  daily_report.md  pyproject.toml  spec.md
app/: ui.py
assets/: README.md
configs/: app.yaml
configs/mmaction/: README.md
core/: cache.py  infer.py  postprocess.py  preprocess.py  viz.py
model_store/configs/mmaction/: slowfast_r50_8xb8-8x8x1-256e_kinetics400-rgb.py
models/: zoo.py
scripts/: download_models.py
tests/: test_infer.py  test_postprocess.py  test_preprocess.py
tests/data/: README.md
